--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=todo
 
-# Server Configuration
-server.port=8080
-
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/nama_database
+spring.datasource.url=jdbc:mysql://localhost:3306/tododb?createDatabaseIfNotExist=true&userSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/nama_database
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
